<resources>
    <string name="aboutname">Gokul Mimrot</string>
    <string name="aboutinfo">Student of Computer science </string>
    <string name="aboutcol">Yeshwantrao Chavan College Sillod Tq.Sillod Dist.Aurangabad</string>
    <string name="aboutname1">Mahesh Solanke</string>
    <string name="aboutinfo1">Student of Bsc</string>
    <string name="aboutcol1">Adarsh collage Rajur Tq.Bhokardan Dist.Jalna </string>
    <string name="app_name">Olakh Sangnkachi </string>
    <string name="logo_text">vksG[k  </string>
    <string name="logo_text2"> lax.kdkphk   </string>
    <string name="anukrmanika">Chapters </string>
    <string name="lpageL1">lax.kdkph rksaMvksG[k</string>
    <string name="lpageL2">lax.kdkpk bfrgkl</string>
    <string name="lpageL3">lax.kdkP;k fi&lt;;k</string>
    <string name="lpageL4">lax.kdkps izdkj </string>
    <string name="lpageL5">buiqV midj.k</string>
    <string name="lpageL6">vkÅViqV midj.ks</string>
    <string name="lpageL7">lkWQ+Vosvj vkf.k gkMZosvj </string>
    <string name="lpageL8">izk;ejh o lsadaMjh LVksjst</string>
    <string name="lpageL9">dkWEI;qVj usVodZ</string>
    <string name="lpageL10">izksxzfeax yWXostl+ </string>
    <string name="lpageL11">Lkax.kdh; xqUgs</string>
    <string name="p1h1">lax.kdkph rksaMvksG[k </string>
    <string name="p1h2"> gtkjks o”kkZaiqohZ ekuo gkrkP;k o ik;kP;k cksVkapk mi;ksx eksteki dj.;klkBh djhr vls- cksVkaph la[;k e;kZfnr vlY;keqGs rks uarj nxM]xksVs][kMs b- pk okij d# ykxyk- uarj ek.kwl tsOgk O;kikj d# ykxyk] laiRrhpk fg’kksc Bsow ykxyk] uouohu la’kks/ku d# ykxyk rsOgk R;kyk xq.kkdkj] Hkkxkdkj] csjht o otkckdh ;k fdz;kaph iVd.k mRrjs feGfo.;klkBh R;kyk la[;k;a=kph xjt Hkklw ykxyh- rls la[;k x.kd ;a=gh r;kj >kys- ;k la[;kx.kd ;a=kykp lax.kd Eg.kw ykxys-
</string>
    <string name="p1h3"> dkWEI;qVj Eg.kts dk; \  </string>
    <string name="p1h4">1½ lax.kd gs ,d vls midj.k vkgs dh] ts okijdR;kZdMwu ekfgrh ?ksrs] rh lkBfors vkf.k R;k ekfgrhoj izfdz;k d#u fudky nk[kors-
</string>
    <string name="p1h5"> 2½dkWEI;qVj gs ,d fo|qr ;a= vlwu rs vkiY;kdMqu ekfgrh ?ksrs] rh lkBfors o lkBfoysY;k ekfgrhoj izfdz;k d#u vkiY;kleksj ,d vFkZiq.kZ fudky lknj djrs-
</string>
    <string name="p1h6"> gk lxa.kdkpk esnaw vlrks- ;ke/;s ekfgrh lkBoyh tkrs- uarj rh
ekfgrh lax.kdkP;k loZ Hkkxkae/;s ikBoyh tkrs-</string>
    <string name="p1h7">gk lax.kdkP;k loZ Hkkxkaoj fu;a=.k Bso.;kps dke djrks- </string>
    <string name="p1h8"> ;ke/;s xf.krh; Hkkx vkf.k rkfdZd dk;Z pkyrs- </string>
    <string name="p1h9"> okijdrkZ lax.kdkyk th ekfgrh nsrks R;kl buiqV vls Eg.krkr-
¼v{kjs]vad]fp=]pyfp= b- Lo#ikr½ </string>
    <string name="p1h10"> okijdrkZ lax.kdki;Zar ekfgrh ikBfo.;klkBh T;k lk/kukapk okij
djrks R;kl buiqV midj.ks Eg.krkr-</string>
    <string name="p1h11">‘kCn]/ouh]izfrek b- ps lax.kdkyk letsy v’kk
Hkk”ksr #ikarj dj.kkjs gkMZosvj midj.ks Eg.kts buiqV midj.ks mnk-
fdcksMZ] ekÅl] LdWuj b- </string>
    <string name="p1h12"> ¼izfdz;k½ vki.k fnysY;k ekfgrhoj flfLVe ;qfuV vkiY;kyk goh r’kh izfdz;k
djrks- </string>
    <string name="p8h1">izk;ejh o lsadaMjh LVksjst </string>
    <string name="p8h2">dWEI;qVjP;k oSf’k”V;kiSdh ,d egRokps oSf’k”V; Eguts R;k dkWEI;qVjph ekghrh lkBfo.;kph {kerk
iqohZ dkWEI;qVj vWukykWx Lo:ikrhyp dkes tk;ph T;kea/;s QDr vad vkf.k v{kjs ;kapk ;kapk lekos’k
vlk;pk v’kk izdkjps  dkes  dj.;klkBh rlsp dkWEI;qVje/;s lkBfo;klkBh rsaOgk izk;ejh LVksjst o lsdaMjh LVksjst midj.kaph {kerk deh vlk;ph ijarq l/;k dkWEI;qVjoj dsY;k tk.kkÚ;k dkekaps Lo:i cnyys vkgs vkrk dkWEI;qVj fMthVy dke dsyh tkrkr T;kaea/;s QDr vad o v{kjs v’kh e;kZfnr u jkgrk R;kea/;s vWfMvks o fOgfMvks Lo:ikrhy ekfgrh r;kj dsth tkr vkgs v’kk izdkjph dkes dkWEI;qVjoj dj.;klkBh R;k dkWEI;qVjph izk;esjh rlsp lsdaMjh LVksjst midj.kkaph ekfgrh lkBfo.;kph {kerk [kqi vlkoh ykxrs-
</string>
    <string name="p8h3">izk;ejh LVksjst </string>
    <string name="p8h4">gk LVksjsstpk izdkj flfLVe ;qfuVP; varckZr Hkkxkr ejncksMZoj fQDl clfoysyk vlrks izk;ejh LVksjst gs rkRiqjR;k Lo:ikps vlrs\ Eg.ktsp ;kea/;s lkBfoysyh ekghrh tksi;Zaaar dkWEI;qVj lq: vlsy rksi;Zarp R;kea/;s vlrs dkWEI;qVj can >kY;kl fdaok dkWEI;qVjyk ,[kknk vMFkGk fuekZ.k >kY;kl ;ke/khy ekfgrh u”V gksrs Eg.kwu izk;ejh LVksjstyk OgksykVkbZy LVksjst vlsgh Eg.krkr-</string>
    <string name="p8h5">izk;ejh LVksjstps izdkj </string>
    <string name="p8h6">daI;qVje?;s vki.k tsOgk lqjokrhyk dks.krhgh ekghrh VkbZi djrks - rsOgk rh jWe e?;s lkBoyh tkrs-
jWeyk OgksykVkbZy OgksykVkbZy LVksjst vlsgh Eg.krkr- daI;qVjpk osxgh cjplk jWeoj voyacqu vlrkr-
vkrkP;k ufou vkWijsfVax flfLVe deh {kersP;k jWeyk liksVZ dfjr ukgh mnk- foUMkst fOgLVk ;k vkWijsfVat flfLVseyk 1th ch jWe vl.ks vko’;d vkgs izdkj ,l jWse] Mh jWe

;k esejh e/khy ekghrh dkWEI;qVj okijdR;kZyk QDr ikgrk fdaok okprk ;sr ;k eWejh e/;s dkWEI;qVj lq: gks.;klkBhP;k egRokP;k QkbZYl vlrkr jkWeyk QeZosvj ;k ukokusgh vksG[kY;k tkrs-
izdkj ihjkWe] bihjkWe] bbiksjkWe

</string>
    <string name="p8h7">lsadaMjh LVksjst </string>
    <string name="p8h8">lsdaMjh LVksjst midj.kke/;s ekfgr gh dk;eLo:ih lkBfoyh tkrs rlsp izk;ejh LVksjstP;k rqyusr lsdaMjh LVksjst midj.kkae?;s vf/kd ekfgrh lkBfoyh tkrs- dkWEI;qVj can iMY;kl fdaok vMFkGk vkY;kl ;ke/khy ekfgrh u”V gksr ukgh lsdaMjh LVksjst midj.kkae/kqu ekfgrh vWDlsl dj.;kP;k izfdz;syk fjfMax vls Eg.krkr</string>
    <string name="p8h9">Q+ykWih fMLd %</string>
    <string name="p8h10">;k fMLdph fufeZrh 1970 lkyh  vk; ch ,e dai.khus dsyh fg fMLd loZlk/kj.ki.ks lkMsrhu bapph vlrs- ;kea/;s 1.44 ,e ch brdh ekfgrh lkBfork ;srs ;kaea/;s Vq ,p Mh gk izdkj loZlk/kj.ki.ks okijyk tkrks-</string>
    <string name="p8h11">gkMZZfMLd %</string>
    <string name="p8h12">lsadMjh LVksjst midj.kkae/;s lokZr eksBs LVksjst midj.k Eg.kqu gkMZfMLdpk mi;ksx dsyk tkrks\ gkMZfMLdph fufeZZrh 1973 lkyh vk;-ch-,e dai.khus dsyh- ekfgrh vWDlsl dj.;klkBh gkMZfMLd pqacdh; cykpk mi;ksx djr- rj vWDlsl dsysyh ekfgrh VzWDl] lsDVlZ o flysaMjoj lkBfryh tkrs-</string>
    <string name="p8h13">gkMZfMLdps izdkj+++</string>
    <string name="p8h14">1½ baVuZy gkMZfMLd % gk gkMZfMLdpk izdkj flfLVe ;qfuVP;k varxZr Hkkxkr fQDl clfoysyk vlrks- ;k ek;dzks dkWEI;qVjlkBh okij.;kr ;s.kk&amp;;k fMLDph LVksjst {kerk toGikl 10 th-ch rs 1000 th-ch Ik;Zar vlrs- baVuZy gkMZfMLdyk lh MzkbZOg Eg.kqugh vksG[kY;k tkrs-</string>
    <string name="p8h15">2½ gkMZfLd dkfVZt %
bzVuZy gkMZZfMLDyk lkg; dj.;klkBh gkMZfMLd dkfVZt pk mi;kzx gksrks- baVuZy gkMZfMLdph LVksjst {kerk 10 rs 20 th-ch brdh vlrs-
</string>
    <string name="p8h16">3½ gkMZfMLd iWDl %
brj gkMZfMLdP;k rqyusr ;k gkMZfMLdph ekfgrh lkBfo.;kph {kerk vf/kd vlrs- esuQsze rlsp feuh dkWEI;qVjlkBh ;k gkMZfMLdpk mi;ksx gksrks-
</string>
    <string name="p8h17">vkWIVhdy fMLd %</string>
    <string name="p8h18">lsdaMjh LVksjst midj.kkaea/;s lokZf/kd ;k midj.kkpk mi;ksx dsyk tkrks- dkj.k vkiY;kyk ;k fMLdea/;s okijdR;kZyk goh r’kh ekfgrh jhM jhbZV djrk ;srs- Q+YkWih fMLdP;k rqyusr ;k fMLdph ekfgrh lkBfo.;kph {kerk vf/kd vlrs- rlsp ;k fMLdoj vWukykWx rlsp fMthVy Lo:ikr ekfgrh lkBfork ;srs- ;k fMLd otukyk gyD;k vlY;keqGs R;k lgtrsus dksBsgh lkscr ?ksoqu tkrk ;srs- vkWIVhdy fMLd ekfgrh vWDlsl dj.k;klkBh ys>j chepk mi;ksx djrs- rlsp vWDlsl dsssysyh ekfgrh vkWIVhdy fMLsd VzWDl o lsDVlZoj lkBfors-</string>
    <string name="p8h19">vkWfIVdy fMLdps izdkj %</string>
    <string name="p8h20">dkWEiWDV fMLd % vkWfIVdy fMLdea/;s ;k fMLdpk mi;ksx lokZf/kd gksrks- ;k fMLdea/;s 650 ,e-ch rs 1 th-ch Ik;Zar ekfgrh lkBfork ;srs- ;k fMLdps rhu izdkj iMrkr-</string>
    <string name="p8h21">1-jhM vksUyh % ;k fMLde/;s vxksnj ,[kknh ekfgrh Hkjysyh vlrs- gh ekfgrh QDr ikgrk fdaok okprk ;sr- uarj okijdR;kZyk ;ke/s;s dks.kR;kgh izdkjpk cny djrk ;sr ukgh-</string>
    <string name="p8h22">2-jkbV oUl % gk fMLdpk izdkj cktkjkr dksjk HksVrks- ;k e/;s ,dnkp ekfgrh lkBfork ;srs- ijarqj uarj ;ke/;s dkfgp cny djrk ;sr ukgh- </string>
    <string name="p8h23">3-jhjk;Vscy % jhjk;Vscy fMLdyk bjstcy fMLd fdaok iqufoekZ.k{ke fMLd vlsgh Eg.krk- dkj.k ;k fMLdea/;s fdrhgh osGsl ekfgrh jhM fdaok jkbZV djrk ;srs-</string>
    <string name="p8h24">fMthVy fOgfMvks @ fMthVy OglZVkbZy fMLd %</string>
    <string name="p8h25">vkWfIVdy fMLdpk gk izdkj osxkus dkWEIWDV fMLdph tkxk ?ksr vkgs- dkj.k ;k fMLda/;s dkWEIkWDV fMLdP;k rqyusr lrjk iV vf/kd ekfgrh lkBfork ;srs- fMOghMh ph ekfgrh lkBfo.;kph {kerk 4-7 th-ch rs 17 th-ch brdh vlrs- dkWEiWDV fMLd izek.ksp ;k fMLdps rhu izdkj iMrkr- 1-jhM vksUyh 2-jkbV oUl 3-jhjk;Vscy</string>
    <string name="p11h1">Lkax.kdh; xqUgs</string>
    <string name="p11h2">fMftVy xqUgs</string>
    <string name="p11h3">iwohZP;k dkGh yksd Lor%ph ewY;oku laiRrh pksjkailwu okpfo.;klkBh vkiY;k ?kjkauk dsoG lk/kh dqywis okijk;ps- l/;k] xqUg+;kauk vkGk ?kky.;klkBh O;Drh vkf.k laLFkk vykeZ vkf.k bUQzkjsM fMVsDVlZ ;kalkj[kh vn+;kor midj.ks okijrkr- vktdky loZlkekU;i.ks vk&lt; G.kk&amp;;k lax.kdh; xqUg;kae/;s iq&lt;hy xqUg+;kapk lekos’k gksrk&amp; \n
1½ekfgrh pksj.ks \n
  2½;fDrxr ekfgrhpk xSjokij \n
 3½dzsfMV dkMZ dzekadkapk xSjokij \n
 4½nql&lt;;kP;k ekfgrhe/;s QsjQkj \n
 5½vf/kÑr ladsrLFkGs dzWd dj.ks- \n
</string>
    <string name="p11h4">ekfgrhpk xSjokij</string>
    <string name="p11h5">fMftVy xqUgs gs loZlk/kkj.ki.ks eksV;k usVodZeqGs gksr vlrkr- lax.kd gs lkoZtfud usVoDlZ}kjs ,desdkauk tksMysys vlrkr] ts iqUgk brj usVoDlZuk tksMys tkrkr- tsOgk eksB;k usVodZe/kwu ekfgrh LFkykarjhr gksr vlrs] rsOgk rh ekfgrh brjkadMqu dk&lt;wu ?ks.;kph fdaok R;kr QsjQkj dsyh tk.;kph ‘kD;rk vlrs-</string>
    <string name="p11h6">ekfgrh pksjus</string>
    <string name="p11h7">usVodZe/kwu ekfgrh LFkykarjhr gksr vlrkuk R;k ekfgrh e/;s QsjQkj gks.;kph ‘kD;rk vlrs o rh ekfgrh brjkadMqu cf?krhyh tk.;kph dk&lt;qu Vkdyh tk.;kph fdaok R;kr QsjQkj dsyh tk.;kph ‘kD;rk vlrs-</string>
    <string name="p11h8">O;Drhxr ekfgrhpk xSjokij </string>
    <string name="p11h9">,[kn;k laLFksph ekfgrh R;kr cny dj.;kcjkscjp xqUgsxkj nql&amp;;kP;k O;Drhxr ekfgrhpk xSjokij djrkr- yksd vusd osGk brjka’kh laokn lk/krkauk Lo%rkph O;Drhxr ekfgrh m?kM djrkr- gh ekfgrh usVoDZloj lxG;kalkBh m?kM gksrs] okbZV gsrq ckGx.kkjs gh ekfgrh pqdhP;k ekxkZus okijrkr- </string>
    <string name="p11h10">dzsMhV dkMZ dzekapk xSjokij</string>
    <string name="p11h11">l/;k dzsMhV dkMZph yksdizh;rk ok&lt;r vkgs- ,[kn;k ladsrLFkGkoqu lkeku [kjsnh djr vlrkuka R;k ladsrLFkGkrk cWadsps uko o dzsMhV dkMZpk dzekad n;kok ykxrks- o uarj  rh jDde vkiY;k [kkR;krqu dkiqu ?ksryh tkrs- tj ladsrLFkG foÜoLr ulsy rj rqeP;k dzsMhV dkMZ dzekadkpk nqjmi;ksx gks.;kph ‘kD;rk vlr-</string>
    <string name="p11h12">gWdlZ vkf.k dzWdlZ</string>
    <string name="p11h13">nql&amp;;kP;k udGr R;kaP;k lax.kdkpk nq#i;ksx djk&amp;;kauk gWdlZ fdaok dzWdlZ vls Eg.krkr-</string>
    <string name="p11h14">gWdlZ</string>
    <string name="p11h15">gWdlZ gs c/nheku izksxkzej vlrkr R;kauk lax.kdkph vkf.k izkxzWfeaxP;k Hkk”kkaph l[kksy ekfgrh vlrs- Lor%P;k {kerk ok&lt;fo.;klkBh izksxWzescy jpukapk ‘kks/k ?ks.ks R;kauk vkoMrs
izksxWzfeax Hkk”kkae/khy ,[k|k leL;slkBh gWd gs [kjks[kj ,d pkaxys lek/kku vkgs- lgt xaer Eg.kqu fdaok vkOgku Eg.kqu gWdlZ nql&amp;;kaph ;a=.k@ ef’ku czsd djrkr- Lor%ps dkS’kY;k vkf.k Kkukps izns’kZu dj.;klkBh fdaok rs fl/n dj.;klkBh rs vls djrkr- rs Lor%P;k dkS’kY;kpk mi;ksx fouk’kdkjh mn~ns’kkalkBh okijr ukghr- loZlk/kkj.ki.ks rs nql&amp;kaP;k flfLVeph lqj{kk riklr vlrkr vkf.k R;krhy mf.kok ‘kks/kwu dk&lt;rkr-
</string>
    <string name="p11h16">dzWdlZ </string>
    <string name="p11h17">nql&amp;;kaph ekfgrh u”V dj.ks fdaok R;kr cny dj.ks v’kk gkuhdkjd dkekalkBh nql&amp;;kaps ef’ku gWd dj.kk&amp;;kauk dzWdlZ Eg.krkr- dzWdlZ ,d vkOgku Eg.kwu fdaok nq”V gsrqus usVoDlZ}kjs nql&amp;;kaP;k lax.kdke/;s f’kjdko djrkr- dzWdlZ xaer Eg.kwu lax.kd gWd djk;yk lq#okr djrkr vkf.k uarj Lor%P;k dkS’kY;kpk okij ‘kkldh; ladsrLFkGs vkf.k vuvf/kÑr ladsrLFkGs gWd dj.;klkBh djrkr- \n
gWdj gk dzWdj vl.;kph vko’;drk ukgh] i.k dzWdj gk ek= mRre gWdj vlok ykxrks- i.k lkekU;r% yksd ákarhy Qjd vksG[k.;kr vi;’kh Bjr vlY;kus gWd vkf.k dzWd gs nksUgh ‘kCn okjaokj vnykcnyhus okijys tkrkr-
</string>
</resources>