<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rkdigitalkedarkheda.gokulmimrot.Olakhsanganakachi.chapter11">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toobar">

        <ImageButton
            android:id="@+id/backbuttonp11"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_backicon" />

        <TextView
            android:id="@+id/bottom11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/lpageL3"
            android:textColor="@color/logotext"
            android:textSize="25dp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewp11a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6803124371320620/4237899813">
    </com.google.android.gms.ads.AdView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/p11h1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h1"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h2"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h3"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p11h4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h4"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h5"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p11h6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h6"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h7"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p11h8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h8"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h9"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewp11a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6803124371320620/4237899813">
            </com.google.android.gms.ads.AdView>
            <TextView
                android:id="@+id/p11h10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h10"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h11"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p11h12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h12"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h13"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p11h14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h14"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h15"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p11h16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p11h16"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p11h17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p11h17"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewp11a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6803124371320620/4237899813">
            </com.google.android.gms.ads.AdView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
