<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rkdigitalkedarkheda.gokulmimrot.Olakhsanganakachi.chapter8">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toobar">

        <ImageButton
            android:id="@+id/backbuttonp8"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_backicon" />

        <TextView
            android:id="@+id/bottom8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/lpageL8"
            android:textColor="@color/logotext"
            android:textSize="25dp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewp8a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-6803124371320620/4237899813">
    </com.google.android.gms.ads.AdView>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/p8h1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h1"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8h2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h2"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h3"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8h4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h4"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h5"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8he1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="RAM (Rabdom access memory)"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200dp"
                android:src="@drawable/ch8img1"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/p8h6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h6"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h7"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8h8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h8"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h9"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200dp"
                android:src="@drawable/ch8img2"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/p8h10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h10"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h11"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200dp"
                android:src="@drawable/ch8img3"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/p8h12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h12"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewp8a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6803124371320620/4237899813">
            </com.google.android.gms.ads.AdView>
            <TextView
                android:id="@+id/p8h13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h13"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8h14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h14"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h15"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h16"
                android:textColor="@color/text"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/p8h17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h17"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8h18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h18"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h19"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8he2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="C.D"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200dp"
                android:src="@drawable/ch8img4"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/p8h20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h20"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h21"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h22"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8h23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h23"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/p8he3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="D.V.D"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <ImageView
                android:layout_width="300sp"
                android:layout_height="200dp"
                android:src="@drawable/ch8img5"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/p8h24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:text="@string/p8h24"
                android:textColor="@color/text"
                android:textSize="25dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/p8h25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:text="@string/p8h25"
                android:textColor="@color/text"
                android:textSize="20dp" />
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewp8a3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-6803124371320620/4237899813">
            </com.google.android.gms.ads.AdView>



        </LinearLayout>
    </ScrollView>


</LinearLayout>
